Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112697

QMessageBox return immediately on macOS if called from MenuBar and after a modal dialog [REG]

XMLWordPrintable

    • macOS
    • d01aa3961 (dev), 1c7a8abe8 (6.5), 9e1e1e28e (tqtc/lts-6.2), dcff882f3 (dev), 239de8cde (6.5), 162ce53fc (6.5.1)

      This bug is similar to QTBUG-111524 except for the start conditions:

      • The QMessageBox have to be exec from the menuBar;
      • Before the exec of the QMessageBox a modal dialog have to be opened;

      Attached you will find an example to reproduce this error, just:

      • Build and run the application on macOS with Qt 6.5
      • Click Menu File -> Show message box
      • Close first dialog with Ok or Cancel
      • ERROR: the QMessageBox returns immediately

      Remarks

      • If you open the QMessageBox without before opening a dialog, or not via the menuBar, it is working correctly, the QMessageBox is not returning immediately.

        For Gerrit Dashboard: QTBUG-112697
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            lsbts1291 Lorenzo Sinigaglia
            Votes:
            4 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: