macOS: Fix leak of application menu NSMenuItem

Fixes: QTBUG-112697
Change-Id: I0fe62e5a66f57bb9b8c073e636be346e088e0986
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
(cherry picked from commit d01aa396171e101ba03638799c2c6fae6d116240)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>